<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.example.lab1.MainActivity$LinAlgoFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/task_lin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/linear"/>

    <LinearLayout
        android:id="@+id/input_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/task_lin"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:text="@string/type_a"
            android:labelFor="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/type_a"
            android:textSize="36sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/a"
            android:textSize="36sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_a"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:text="@string/type_b"
            android:labelFor="@+id/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/type_b"
            android:textSize="36sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/b"
            android:textSize="36sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_b"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:text="@string/type_c"
            android:labelFor="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/type_c"
            android:textSize="36sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/c"
            android:textSize="36sp"/>

    </LinearLayout>

    <Button
        android:text="@string/calc_butt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_c"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/calculate_button"
        android:textSize="36sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/calculate_button"
        android:layout_centerHorizontal="true"
        android:id="@+id/y"
        android:layout_marginTop="20dp"
        android:textSize="36sp" />

</RelativeLayout>
</ScrollView>