<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.example.lab1.MainActivity$BranchAlgoFragment">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/task_branch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/branching"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:scaleType="fitXY" />

    <LinearLayout
        android:id="@+id/input_k"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/task_branch"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:text="@string/type_k"
            android:labelFor="@+id/k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/type_k"
            android:textSize="36sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/k"
            android:textSize="36sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/input_k"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:text="@string/type_d"
            android:labelFor="@+id/d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/type_d"
            android:textSize="36sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/d"
            android:textSize="36sp"/>

    </LinearLayout>

    <Button
        android:text="@string/calc_butt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_d"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/calculate_button"
        android:textSize="36sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/calculate_button"
        android:layout_centerHorizontal="true"
        android:id="@+id/y"
        android:layout_marginTop="30dp"
        android:textSize="36sp" />

</RelativeLayout>

</ScrollView>
